[package]
name = "web-bench"
version = "0.1.0"
edition = "2021"
default-run = "wb"
license = "MIT"
repository = "https://github.com/hypercodec/web-bench"
authors = ["HyperCodec"]
description = "A small tool to benchmark webservers"
readme = "README.md"
keyword = ["cli", "benchmark", "webserver"]
categories = ["command-line-interface", "development-tools", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["blocking"] }
url = "2.4.1"
